# remote-gen

./: README.md
client/: Cargo.toml
client/.cargo/: config.toml
client/src/: main.rs  module_manager.rs
client/src/features/: auto_start.rs  command.rs  display.rs  executable_move.rs  mod.rs
server/: .gitignore
