[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combine_rust = "0.1.4"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde="1.0.188"
screenshots = {version="0.4.4", optional = true}
async-trait = "0.1.57"
enigo = {version = "0.1.3", optional = true}

[features]
auto_start=[]
executable_move=[]
display=["dep:screenshots", "dep:enigo"]